--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Elena Gjevukaj # add your name
 author-img: profile.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-twitter: elenagjevukaj add your Twitter handle
+social-facebook: elenagjevukaj add your Facebook handle
+social-github: elenagjevukaj # add your Github handle
+social-linkedin: elenagjevukaj add your Linkedin handle
+social-email: gjevukaje@gmail.com add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
