--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ about-author: I am a web developer focusing on front-end development. Always hun
 social-twitter: www.twitter.com/elenagjevukaj add your Twitter handle
 social-facebook: www.facebook.com/elenagjevukaj add your Facebook handle
 social-github: www.github.com/elenagjevukaj # add your Github handle
-social-linkedin: www.linkedin.com/in/elenagjevukaj/ add your Linkedin handle
+social-linkedin: in/elenagjevukaj/ add your Linkedin handle
 social-email: gjevukaje@gmail.com add your Email address
 
 # Disqus
