--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ author-img: profile.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: www.twitter.com/elenagjevukaj add your Twitter handle
 social-facebook: www.facebook.com/elenagjevukaj add your Facebook handle
-social-github: www.github.com/elenagjevukaj # add your Github handle
-social-linkedin: in/elenagjevukaj/ add your Linkedin handle
+social-github: /elenagjevukaj 
+social-linkedin: in/elenagjevukaj
 social-email: gjevukaje@gmail.com add your Email address
 
 # Disqus
