--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ about-author: I am a web developer focusing on front-end development. Always hun
 social-twitter: elenagjevukaj 
 social-facebook: elenagjevukaj 
 social-github: elenagjevukaj 
-social-linkedin: in/elenagjevukaj
+social-linkedin: elenagjevukaj
 social-email: gjevukaje@gmail.com 
 
 # Disqus
