--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Elena Gjevukaj # add your name
 author-img: profile.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+about-author: I'm an open source enthusiast with a bachelor degree in Computer Science.
 social-twitter: elenagjevukaj 
 social-facebook: elenagjevukaj 
 social-github: elenagjevukaj 
